deploy/kubernetes/manifests/07-catalogue-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue-db
  labels:
    name: catalogue-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue-db
  template:
    metadata:
      labels:
        name: catalogue-db
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '9104'
    spec:
      containers:
      - name: catalogue-db
        image: weaveworksdemos/catalogue-db:0.3.0
        env:
          - name: MYSQL_ROOT_PASSWORD
            value: fake_password
          - name: MYSQL_DATABASE
            value: socksdb
        ports:
        - name: mysql
          containerPort: 3306
      - name: mysqld-exporter
        image: prom/mysqld-exporter:v0.15.1
        args:
          - --mysqld.address=127.0.0.1:3306
          - --mysqld.username=root
        env:
          - name: MYSQLD_EXPORTER_PASSWORD
            value: fake_password
        ports:
        - name: mysql-metrics
          containerPort: 9104
      nodeSelector:
        beta.kubernetes.io/os: linux
