deploy/kubernetes/manifests/21-session-db-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: session-db
  template:
    metadata:
      labels:
        name: session-db
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/path: /metrics
        prometheus.io/port: '9121'
    spec:
      containers:
      - name: session-db
        image: redis:alpine
        command: ["redis-server", "/usr/local/etc/redis/redis.conf"]
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - name: data
          mountPath: /data
        - name: config
          mountPath: /usr/local/etc/redis
          readOnly: true
        securityContext:
          capabilities:
            drop:
              - all
            add:
              - CHOWN
              - SETGID
              - SETUID
          readOnlyRootFilesystem: true
      - name: redis-exporter
        image: oliver006/redis_exporter:v1.62.0
        args:
        - --redis.addr=redis://127.0.0.1:6379
        ports:
        - name: redis-metrics
          containerPort: 9121
      volumes:
      - name: data
        emptyDir: {}
      - name: config
        configMap:
          name: session-db-config
      nodeSelector:
        beta.kubernetes.io/os: linux
